fixed header image stretch

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,7 @@ h3 {
     background-position-y: -2px;
 }
 .header-image {
-    height: 70%;
+    height: 90%;
     width: 30%;
 }
 .mdl-textfield {
